# hp-vendor

./: .gitignore  Cargo.toml  DataConfigResponseModel.json  DataUploadRequestModel.json  Makefile  README.md  UploadEventPackageRequestModel.json  build.rs  event_package.json  hp-vendor-daily.service  hp-vendor-daily.timer  hp-vendor-opt-out.service  hp-vendor-opt-out.timer  hp-vendor-upload.service  hp-vendor.service  org.pop_os.hpvendor.pkla  org.pop_os.hpvendor.policy  proto.sh  purposes.json
debian/: changelog  control  pop-hp-vendor-dkms.dkms  pop-hp-vendor-dkms.modaliases  pop-hp-vendor.gsettings-override  pop-hp-vendor.install  pop-hp-vendor.postinst  rules
dkms/: Makefile  hp_vendor.c
examples/: not_generated.rs  smart_log_test.rs  udev.rs
hp-vendor-client/: Cargo.toml  purposes.json
hp-vendor-client/examples/: download.rs  example.rs  is-supported.rs  purposes.rs
hp-vendor-client/src/: conf.rs  error.rs  lib.rs
src/: api.rs  cmd.rs  config.rs  daemon.rs  daily.rs  db.rs  delete.rs  download.rs  event.rs  frequency.rs  lib.rs  main.rs  print.rs  proto.rs  report.rs  util.rs
src/cli/: .daemon.rs.swp  .daily.rs.swp  .print.rs.swp  consent.rs  daemon.rs  daily.rs  delete.rs  disable.rs  download.rs  exists.rs  mod.rs  print.rs  send_opt_out.rs  upgrade_opt_out.rs  upload.rs
src/cmd/: consent.rs  daemon.rs  daily.rs  delete.rs  download.rs  mod.rs  print.rs  upload.rs
src/proto/: base_board.rs  battery.rs  display.rs  driver.rs  event.rs  firmware.rs  graphics.rs  memory.rs  network.rs  operating_system.rs  peripheral.rs  processor.rs  state.rs  storage.rs  system.rs  thermal.rs  tpm.rs
src/util/: dmi.rs  drm.rs  lock.rs  nvme.rs  pcie.rs  sensors.rs  systemd.rs
tests/: validate.rs
