[package]
name = "hp-vendor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.7.0"
libc = "0.2.104"
log = "0.4.14"
nix = "0.23"
os-release = "0.1.0"
plain = "0.2.3"
protobuf = "=2.8.1"
raw-cpuid = "10.2.0"
redox_dmi = { git = "https://gitlab.redox-os.org/redox-os/dmi" }
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
schemafy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[build-dependencies]
convert_case = "0.5"
proc-macro2 = "1"
quote = "1"
serde_json = "1"

[dev-dependencies]
valico = "3"

[features]
disable-model-check = []
