[package]
name = "hp-vendor"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
drm = "0.6.2"
hp-vendor-client = { path = "hp-vendor-client" }
libc = "0.2.104"
mio = { version = "0.8", features = ["os-ext"] }
nix = "0.23"
os-release = "0.1.0"
plain = "0.2.3"
redox_dmi = { git = "https://gitlab.redox-os.org/redox-os/dmi" }
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
rusqlite = "0.26.3"
schemafy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset"] }
udev = { version = "0.6", features = ["mio08"] }
uuid = "0.8"

[build-dependencies]
convert_case = "0.5"
proc-macro2 = "1"
quote = "1"
serde_json = "1"

[dev-dependencies]
valico = "3"
